# commit-translator

./: .gitignore  .gitignore   LICENSE  README.md  commit_types.yaml  pyproject.toml  translate.py
docs/: README_jp.md  README_ko.md
